@@ -1,12 +1,14 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-   <title>ImageMagick - Image Processing and Display Package</title>
+   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="description" content="ImageMagick is a    robust collection of tools and libraries to read, write, and manipulate    an image in any of the more popular image formats including GIF, JPEG,    PNG, PDF, and Photo CD.  With ImageMagick you can create GIFs dynamically    making it suitable for Web applications.  You can also resize, rotate,    sharpen, color reduce, or add special effects to an image and save your    completed work in the same or  differing image format.">
    <meta name="keywords" content="ImageMagick, Image Magick, Image Magic,    PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
-   <link rev="made" href="mailto:magick.dupont.com">
+   <meta name="GENERATOR" content="Mozilla/4.7 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
+   <title>ImageMagick - Image Processing and Display Package</title>
+<link rev="made" href="mailto:magick.dupont.com">
 </head>
-<body bgcolor="#FFFFFF" text="#000000" link="#0085c0" vlink="#800080" alink="#0085c0" >
+<body text="#000000" bgcolor="#FFFFFF" link="#1F00FF" vlink="#9900DD" alink="#FF0000">
 
 <center><img SRC="../images/magick_small.png" width=129 height=133></center>
 <p>
@@ -21,6 +23,10 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-11-10  Cristy  <cristy@mystic.es.dupont.com>
+	* Added SVG pattern support.
+	* Changed default background color to none.
+
 2001-11-05  Cristy  <cristy@mystic.es.dupont.com>
 	* Added -level to convert/mogrify (suggested by
 	  mericson@phillynews.kom).
